# face-mask-ssd-trt

./: .gitignore  face_mask_dashboard.py  face_mask_detection_trt.py  face_mask_inference.py  frontend.py  kill_face_mask_app.sh  labels-face-mask.txt  main.py  onnx2trt_converter.py  run_face_mask_app.sh  test.py
assets/: internal.css
cpp/: CMakeLists.txt  inference_cpp.cpp  nms_2d.cu  onnx2trt_converter.cpp  ref  utils.cpp
detector/: __init__.py  camera.py  inference.py  io_handler.py  server.py
detector/utils/: __init__.py  helper.py  postprocessing.py  preprocessing.py  trt_utils.py
utils/: trt_utils.py  utils.py
